# ujira

./: .gitignore  Makefile  README.md  auth.env.sample  config.yml.sample  pyproject.toml
scripts/: jirashell.sh
ujira/: auth.py  config.py  fmt.py  proxy.py  server.py
ujira/components/: __init__.py  issue.py  issues_table.py  page.py
ujira/routers/: api.py
